force-app/zurich-base/main/default/objects/LeadAssignmentConfiguration__c/LeadAssignmentConfiguration__c.object-meta.xml
<CustomObject>
    <description>Permite configurar la lógica de asignación de leads directamente desde producción.</description>
    <label>Lead Assignment Configuration</label>
    <nameField>
        <displayFormat>LA-{0000000}</displayFormat>
        <label>Lead Assignment Configuration</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leads Assignment Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>