force-app/zurich-base/main/default/objects/LeadAssignmentConfiguration__c/fields/ActionName__c.field-meta.xml
<CustomField>
    <fullName>ActionName__c</fullName>
    <label>ActionName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>