force-app/zurich-base/main/default/objects/LeadAssignmentConfiguration__c/fields/AssignmentType__c.field-meta.xml
<CustomField>
    <fullName>AssignmentType__c</fullName>
    <description>Criterio de asignación.</description>
    <inlineHelpText>Indica el criterio de asignación de leads a mediadores (Directa, por provincia, etc.)</inlineHelpText>
    <label>Assignment type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Province</fullName>
            </value>
            <value>
                <fullName>Municipality</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>