force-app/zurich-base/main/default/objects/LeadAssignmentConfiguration__c/fields/AssignTo__c.field-meta.xml
<CustomField>
    <fullName>AssignTo__c</fullName>
    <label>Assign to</label>
    <length>50</length>
    <type>Text</type>
</CustomField>