force-app/zurich-base/main/default/objects/LeadAssignmentConfiguration__c/fields/FormFactor__c.field-meta.xml
<CustomField>
    <fullName>FormFactor__c</fullName>
    <label>FormFactor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Province</fullName>
            </value>
            <value>
                <fullName>Municipality</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>