force-app/zurich-base/main/default/objects/LeadAssignmentConfiguration__c/fields/ForumOrigin__c.field-meta.xml
<CustomField>
    <fullName>ForumOrigin__c</fullName>
    <description>Formulario de origen de los datos.</description>
    <inlineHelpText>La correspondencia de nombre debe ser exacta.</inlineHelpText>
    <label>Forum origin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>