force-app/zurich-base/main/default/objects/LeadAssignmentConfiguration__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Idioma del lead</description>
    <label>Language</label>
    <length>50</length>
    <type>Text</type>
</CustomField>