force-app/zurich-base/main/default/objects/LeadAssignmentConfiguration__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Código de provincia</description>
    <inlineHelpText>Coincide con los dos primeros dígitos del código postal. Si el código postal comienza por 0, el código de provincia también deberá comenzar por cero.</inlineHelpText>
    <label>PostalCode</label>
    <length>2</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>