force-app/zurich-base/main/default/objects/LeadAssignmentConfiguration__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <label>Property</label>
    <type>Phone</type>
</CustomField>