force-app/zurich-base/main/default/objects/LeadAssignmentConfiguration__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Provincia de los leads que serán asignados al mediador indicado.</description>
    <label>Province</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>