force-app/zurich-base/main/default/objects/LeadAssignmentConfiguration__c/fields/ProvinceCode__c.field-meta.xml
<CustomField>
    <fullName>ProvinceCode__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>ProvinceCode</label>
    <length>2</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>