force-app/zurich-base/main/default/objects/LeadAssignmentConfiguration__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <type>Phone</type>
</CustomField>