force-app/zurich-base/main/default/objects/LeadAssignmentConfiguration__c/fields/ZIPRanges__c.field-meta.xml
<CustomField>
    <fullName>ZIPRanges__c</fullName>
    <description>Asignación de rangos de códigos postales de leads a mediadores.</description>
    <inlineHelpText>Formato json:

Cada dupla contiene el último Código Postal del rango, seguido del código de mediador receptor.

Con un único rango: {&quot;02999&quot;: &quot;123456789&quot;}, los códigos postales entre 02000 y 02999 se asignarán al mediador con código 123456789

Con varios rangos: {&quot;08020&quot;: &quot;111111111&quot;, &quot;08999&quot;: &quot;222222222&quot;}. los códigos postales entre 00000 y 08020 se asignarán al mediador con código 111111111, los que estén entre 08021 y 08999, a 222222222.</inlineHelpText>
    <label>ZIPRanges</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>