force-app/zurich-base/main/default/objects/LeadAssignmentConfiguration__c/recordTypes/ForumOriginAssignment.recordType-meta.xml
<RecordType>
    <fullName>ForumOriginAssignment</fullName>
    <active>true</active>
    <label>ForumOriginAssignment</label>
</RecordType>