force-app/zurich-base/main/default/objects/LeadAssignmentConfiguration__c/recordTypes/LanguageAssignment.recordType-meta.xml
<RecordType>
    <fullName>LanguageAssignment</fullName>
    <active>true</active>
    <description>Se utiliza para indicar a qué mediador se deben asignar los leads en función de su idioma.</description>
    <label>Language Assignment</label>
</RecordType>