force-app/zurich-base/main/default/objects/LeadAssignmentConfiguration__c/recordTypes/MunicMunicipalityAssignmentipalityAssignment.recordType-meta.xml
<RecordType>
    <fullName>MunicMunicipalityAssignmentipalityAssignment</fullName>
    <active>true</active>
    <label>MunicipalityAssignment</label>
</RecordType>