force-app/zurich-base/main/default/objects/LeadAssignmentConfiguration__c/recordTypes/ProvinceAssignment.recordType-meta.xml
<RecordType>
    <fullName>ProvinceAssignment</fullName>
    <active>true</active>
    <description>Se utiliza para indicar a qué mediador se deben asignar los leads de cada provincia.</description>
    <label>Province Assignment</label>
</RecordType>