force-app/zurich-base/main/default/objects/LeadAssignmentConfiguration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AssignTo__c</columns>
    <columns>Language__c</columns>
    <columns>AssignmentType__c</columns>
    <columns>ForumOrigin__c</columns>
    <columns>ProvinceCode__c</columns>
    <columns>ZIPRanges__c</columns>
    <columns>PostalCode__c</columns>
    <columns>Province__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>Ver todo</label>
</ListView>