force-app/zurich-base/main/default/objects/LeadAssignmentConfiguration__c/listViews/ForumOrigin.listView-meta.xml
<ListView>
    <fullName>ForumOrigin</fullName>
    <columns>NAME</columns>
    <columns>AssignTo__c</columns>
    <columns>AssignmentType__c</columns>
    <columns>ForumOrigin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>LeadAssignmentConfiguration__c.ForumOriginAssignment</value>
    </filters>
    <label>Forum Origin</label>
</ListView>