force-app/zurich-base/main/default/objects/LeadAssignmentConfiguration__c/listViews/LanguageAssignment.listView-meta.xml
<ListView>
    <fullName>LanguageAssignment</fullName>
    <columns>NAME</columns>
    <columns>AssignTo__c</columns>
    <columns>Language__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>LeadAssignmentConfiguration__c.LanguageAssignment</value>
    </filters>
    <label>Language Assignment</label>
</ListView>