force-app/zurich-base/main/default/objects/LeadAssignmentConfiguration__c/listViews/MunicipalityAssignment.listView-meta.xml
<ListView>
    <fullName>MunicipalityAssignment</fullName>
    <columns>NAME</columns>
    <columns>ProvinceCode__c</columns>
    <columns>ZIPRanges__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>LeadAssignmentConfiguration__c.MunicipalityAssignment</value>
    </filters>
    <label>Asignación por municipio</label>
</ListView>