force-app/zurich-base/main/default/objects/LeadAssignmentConfiguration__c/listViews/ProvinceAssignment.listView-meta.xml
<ListView>
    <fullName>ProvinceAssignment</fullName>
    <columns>NAME</columns>
    <columns>AssignTo__c</columns>
    <columns>PostalCode__c</columns>
    <columns>Province__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>LeadAssignmentConfiguration__c.ProvinceAssignment</value>
    </filters>
    <label>Province Assignment</label>
</ListView>